--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "puppeteer": "^22.6.0",
     "selenium-webdriver": "^4.18.1"
